fixed horizontal scrolling

--- a/src/assets/styles/about.css
+++ b/src/assets/styles/about.css
@@ -103,8 +103,7 @@
         line-height: 32px;
     }
     .skillset{
-        flex-wrap: wrap;
-        gap: 20px;
+        gap: 10px;
         align-items: center;
     }
     .my-skillset p{
